# polycheck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/polycheck/: __init__.py  cli.py  config.py  detect.py  finding.py  mcp_server.py  registry.py  runner.py  session.py
src/polycheck/languages/: __init__.py
src/polycheck/reporters/: __init__.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
src/polycheck/tools/: __init__.py  actionlint.py  base.py  depcheck.py  deptry.py  eslint.py  gitleaks.py  hadolint.py  knip.py  mypy.py  npm_audit.py  pip_audit.py  ruff.py  semgrep.py  shellcheck.py  sonarless.py  tsc.py  vulture.py
tests/: test_cli_helpers.py  test_config.py  test_detect.py  test_finding.py  test_install.py  test_mcp_server.py  test_registry.py  test_reporters.py  test_runner.py  test_session.py  test_smoke.py  test_sonarless.py
